fix: user Signup

--- a/sparkom-front/public/index.html
+++ b/sparkom-front/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="SparKom" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/sparkom/image/upload/v1619741116/logosparkom_gon6ei.png"
+    />
     <meta
       name="description"
       content="Welcome to Sparkom the Biggest Social Network in the World Connecting People from All over the world"
