--- a/sparkom-front/public/index.html
+++ b/sparkom-front/public/index.html
@@ -19,7 +19,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
       rel="stylesheet"
     />
-
+    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,5 +32,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      src="https://apis.google.com/js/api.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
